// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load Files Should convert complex sql account-levelisations.query.sql: account-levelisations.query.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
    q: string;
    levelisationId: null | number;
    ids: number[];
    limit: number;
    offset: number;
}

export interface QueryResult {
    id: null | number;
    levelisationId: null | number;
    accountId: null | number;
    installationId: null | number;
    state: \\"Pending\\" | \\"Done\\";
    isAccepted: null | boolean;
    generationStartReadOn: null | Date;
    generationStartReadValue: null | string;
    generationEndReadOn: null | Date;
    generationEndReadValue: null | string;
    generationPercentageSplit: null | number;
    generationPayment: null | string;
    generationEnergy: null | string;
    exportStartReadOn: null | Date;
    exportStartReadValue: null | string;
    exportEndReadOn: null | Date;
    exportEndReadValue: null | string;
    exportPercentageSplit: null | number;
    exportPayment: null | string;
    exportEnergy: null | string;
    totalPayment: null | string;
    vatPayment: null | string;
    cfrFitId: null | string;
}
"
`;

exports[`Load Files Should convert complex sql account-levelisations-set-bulk-update.query.sql: account-levelisations-set-bulk-update.query.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
    ids: number[];
}

export interface QueryResult {
    id: null | number;
}
"
`;

exports[`Load Files Should convert complex sql accounts.query.sql: accounts.query.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
    q: string;
    ids: number[];
    limit: number;
    offset: number;
}

export interface QueryResult {
    id: null | number;
    state: \\"Active\\" | \\"Pending\\" | \\"Dispute\\" | \\"Closed\\";
    startOn: null | Date;
    firstName: null | string;
    lastName: null | string;
    email: null | string;
    address: string;
    fitIds: (null | string)[];
}
"
`;

exports[`Load Files Should convert complex sql accounts.sql: accounts.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
}

export interface QueryResult {
}
"
`;

exports[`Load Files Should convert complex sql bacs.query.sql: bacs.query.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
    quarter: string;
    perPage: string;
    offset: string;
}

export interface QueryResult {
    fitId: string;
    name: null | string;
    amount: string;
    quarter: string;
    bankDetails: string;
    addressLine1: null | string;
    addressLine2: null | string;
    addressLine3: null | string;
    postcode: null | string;
}
"
`;

exports[`Load Files Should convert complex sql contracts.sql: contracts.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
}

export interface QueryResult {
}
"
`;

exports[`Load Files Should convert complex sql generation-read-data.query.sql: generation-read-data.query.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
    installationId: null | number;
    exportDateOn: Date;
}

export interface QueryResult {
    dateOn: null | Date;
    value: null | number;
}
"
`;

exports[`Load Files Should convert complex sql installation-meter-update.query.sql: installation-meter-update.query.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
    meterId: null | number;
    removalDate: unknown;
}

export interface QueryResult {
}
"
`;

exports[`Load Files Should convert complex sql installations.sql: installations.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
}

export interface QueryResult {
}
"
`;

exports[`Load Files Should convert complex sql meter-reads.sql: meter-reads.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
}

export interface QueryResult {
}
"
`;

exports[`Load Files Should convert complex sql rates-by-tarrif-ids.query.sql: rates-by-tarrif-ids.query.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
    ids: null | number;
}

export interface QueryResult {
    tariffId: null | number;
    rate: null | string;
    startOn: null | Date;
    tariffCode: null | string;
    tariffType: \\"Export\\" | \\"Generation\\" | \\"SEG\\";
    endOn: null | Date;
}
"
`;

exports[`Load Files Should convert complex sql read-create.query.sql: read-create.query.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
    meterId: null | number;
    reason: null | string;
    type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    dateOn: null | Date;
    submittedAt: null | Date;
    value: number;
}

export interface QueryResult {
    id: null | number;
    value: null | number;
    meterId: null | number;
    submittedAt: null | Date;
}
"
`;

exports[`Load Files Should convert complex sql reads-by-account-id.query.sql: reads-by-account-id.query.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
    id: null | number;
    offset: string;
    perPage: string;
}

export interface QueryResult {
    id: null | number;
    msn: null | string;
    meterId: null | number;
    dateOn: null | Date;
    value: null | number;
    type: \\"Opening\\" | \\"Closing\\" | \\"Quarterly\\" | \\"Meter Verification\\";
    reason: null | string;
    createdAt: null | Date;
    updatedAt: null | Date;
    sourceSystemId: null | number;
    mpan: null | string;
}
"
`;

exports[`Load Files Should convert complex sql tariff-rates.sql: tariff-rates.sql 1`] = `
"export interface Query {
    params: QueryParams;
    result: QueryResult;
}

export interface QueryParams {
}

export interface QueryResult {
}
"
`;
